# official-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
agent-tests/: agent.py  aitp_test_messages.py  llm_aitp.py  menu.py  metadata.json
agentkit-py/: agent.py  metadata.json
ai-oracle-agent/: agent.py  metadata.json  publish.html  utils.py
aitp-agent/: README.md  agent.py  aitp.py  aitp_schema_handler.py  aitp_tools_handler.py  metadata.json  utils.py
assistant/: agent.py  discovery.py  memory.py  metadata.json
cdp_langchain_chatbot/: README.md  agent.py  metadata.json  pyproject.toml
common-tool-library/: README.md  agent.py  common_tool_definitions.py  metadata.json  prompts.txt  setup.py
eth-agent/: agent.py  metadata.json
near-agent/: agent.py  metadata.json  utils.py
near-secret-agent/: agent.py  metadata.json
pass-through/: agent.py  discovery.py  metadata.json
product-requirements-agent/: README.md  agent.py  metadata.json
raid-ai-ft/: agent.py  metadata.json
raid-airdrop/: agent.py  metadata.json
shirt_agent/: agent.py  create_order.py  metadata.json  shirt_agent.py  system_log.txt
smart-agent/: agent.py  aitp.py  aitp_schema_handler.py  aitp_tools_handler.py  checkout_aitp.py  metadata.json  payments_aitp.py  products_aitp.py  prompt.py  shopping_api.py  shopping_mcp.py  state.py
sound-sage/: agent.py  merchant_config.py  metadata.json  products_aitp.py  prompt.py  shopping_mcp.py  state.py  test_messages.py
streaming-example/: agent.py  metadata.json
test-agent/: agent.py  metadata.json
what-beats-rock-onchain/: agent.py  (+1 more)
(+26 files in other folders)
