[tool.poetry]
name = "cdp_langchain_chatbot_example_usage"
version = "0.0.1"
description = "Coinbase agentkit chatbot example usage"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
nearai-langchain = "^0.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
